@@ -125,7 +125,7 @@ class TestDeleteSQL(TestBaseSQL):
         # parent document
         response, status = self.get('users/%s/invoices' % fake_person_id)
         person_id = response[self.app.config['ITEMS']][1]['people']
-        self.assertEqual(person_id, fake_person_id)
+        self.assertEqual(person_id['_id'], fake_person_id)
 
         # delete all documents at the sub-resource endpoint
         response, status = self.delete('users/%s/invoices' % fake_person_id)
